schema/testdata/validation_operations_lower_camel/schema.keel
model Profile {
  fields {
  
      username Text {
          @unique
      }
  }

  operations {
    create CREATE_PROFILE() with (username) 
  }
}
