schema/testdata/errors/function_unsupported_attribute.keel
model Profile {
    fields {
        username Text
    }

    actions {
        create createProfile() with (username) {
            //expect-error:13:21:E011:actions 'createProfile' has an unrecognised attribute @unknown
            @unknown
        }
    }
}
